# strata-template-documentai-api

./: README.md  code.json  copier.yml  renovate.json
template/: Dockerfile.jinja  Makefile.jinja  docker-compose.yml.jinja  pyproject.toml  pyproject.toml.jinja  requirements.txt.jinja
template/.github/workflows/: ci-{{app_name}}.yml.jinja
template/docs/{{app_name}}/: accessing-real-aws-resources-from-docker.md  api-authentication.md  writing-tests.md.jinja
template/docs/{{app_name}}/diagrams/: architecture.mmd
template/src/{{app_name_python}}/: main.py.jinja
template/src/{{app_name_python}}/config/: constants.json  constants.py
template/src/{{app_name_python}}/services/: bda.py  s3.py
template/src/{{app_name_python}}/utils/: aws_client_factory.py  bda.py  bda_invoker.py  bda_output_processor.py  ddb.py  document_detector.py  env.py  error_handling.py  models.py  response_builder.py  response_codes.py  s3.py  schemas.py
template/src/{{app_name}}/: main.py.jinja
template/src/{{app_name}}/config/: constants.json  constants.py  settings.json  settings.py  settings.py.jinja
template/src/{{app_name}}/schemas/: document_metadata.py
template/src/{{app_name}}/services/: bda.py  bedrock_data_automation.py  bedrock_data_automation.py.jinja  ddb.py  ddb.py.jinja  s3.py  s3.py.jinja
template/src/{{app_name}}/utils/: aws_client_factory.py  bda.py  bda_invoker.py  bda_output_processor.py  cache.py  ddb.py  document_detector.py  error_handling.py  models.py  response_builder.py  response_codes.py  s3.py
template/{{app_name}}/: .dockleconfig  Dockerfile  Dockerfile.jinja  Makefile.jinja  README.md.jinja  docker-compose.yml.jinja  local.env.example.jinja  pyproject.toml  pyproject.toml.jinja  trivy-secret.yaml
template/{{app_name}}/.github/workflows/: ci-{{app_name}}.yml.jinja
template/{{app_name}}/scripts/: export_openapi.py.jinja
template/{{app_name}}/src/documentai_api/: app.py  main.py
template/{{app_name}}/src/{{app_name_python}}/: main.py  main.py.jinja
template/{{app_name}}/tests/: conftest.py  conftest.py.jinja  test_app.py  test_app_auth.py  test_app_batch_endpoints.py  test_app_dictionary.py  test_app_document_build_endpoints.py  test_app_presigned_url.py  test_main.py  test_main.py.jinja
template/{{app_name}}/tests/jobs/: test_bda_result_processor.py  (+2 more)
(+173 files in other folders)
