[project]
name = "document-ai-api"
version = "0.1.0"
description = "Document AI API"
requires-python = ">=3.11"
authors = [{name = "Your Name", email = "your.email@example.com"}]

dependencies = [
  "boto3>=1.34.0",
  "fastapi>=0.104.0",
  "python-multipart>=0.0.6",
  "uvicorn>=0.24.0",
  "python-magic>=0.4.27",
  "pypdf>=3.17.4",
  "opencv-python-headless==4.9.0.80",
  "numpy==1.26.4",
  "pdf2image>=1.16.0"
]

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "isort>=5.12.0", 
  "pytest>=7.0.0",
  "pytest-xdist>=3.0.0",
  "ruff>=0.1.0",
  "httpx>=0.24.0"
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
