[project]
name = "documentai-api"
version = "0.1.0"
description = "DocumentAI API"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "boto3>=1.34.0",
  "fastapi>=0.104.0",
  "python-multipart>=0.0.6",
  "uvicorn>=0.24.0",
  "python-magic>=0.4.27",
  "pypdf>=3.17.4",
  "opencv-python-headless==4.9.0.80",
  "numpy==1.26.4",
  "pdf2image>=1.16.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-xdist>=3.0.0",
  "ruff>=0.1.0",
  "httpx>=0.24.0"
]

[tool.ruff]
line-length = 100
# see docs at https://docs.astral.sh/ruff/rules
lint.select = [
    # flake8-bugbear
    "B",
    # pydocstyle
    "D", "D404",
    # pycodestyle, ones that don't deal with formatting
    "E4", "E7", "E9",
    # Pyflakes
    "F",
    # FastAPI
    "FAST",
    # refurb
    "FURB",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pep8-naming
    "N",
    # perflint
    "PERF",
    # flake8-pytest-style
    "PT",
    # ruff stuff
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-debugger
    "T10",
    # pyupgrade
    "UP",
]
lint.ignore = [
    # don't require *every* public thing to have a docstring
    "D1",
    # some params are obvious
    "D417",
    # preserve even simple if-else blocks
    "SIM108",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
